fix: tab nav overflow

--- a/packages/vant-css/src/tab.css
+++ b/packages/vant-css/src/tab.css
@@ -73,6 +73,7 @@ $van-tabs-card-height: 28px;
 
     .van-tabs__nav {
       overflow-x: auto;
+      overflow-y: hidden;
       -webkit-overflow-scrolling: touch;
 
       &::-webkit-scrollbar {
